src/test/ui/issues/issue-35976.stderr
error: the `wait` method cannot be invoked on a trait object
  --> $DIR/issue-35976.rs:14:9
   |
LL |     arg.wait();
   |         ^^^^
help: another candidate was found in the following trait, perhaps add a `use` for it:
   |
LL | use private::Future;
   |

error: aborting due to previous error

